Project2/y.output
Nonterminals useless in grammar

   Int_Expr
   Const_Expr


Terminals unused in grammar

   T_UInt
   T_BVec2
   T_BVec3
   T_BVec4
   T_IVec2
   T_IVec3
   T_IVec4
   T_UVec2
   T_UVec3
   T_UVec4
   T_Dims
   T_Struct
   T_Break
   T_Continue
   T_Do
   T_Return


Rules useless in grammar

  145 Int_Expr: Expr

  146 Const_Expr: Cond_Expr


State 203 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Trans_Unit

    2 Var_Ident: T_Identifier

    3 Pri_Expr: Var_Ident
    4         | T_IntConstant
    5         | T_FloatConstant
    6         | T_BoolConstant
    7         | '(' Expr ')'

    8 Pst_Expr: Pri_Expr
    9         | Func_Call
   10         | Pst_Expr '.' T_FieldSelection
   11         | Pst_Expr T_Inc
   12         | Pst_Expr T_Dec

   13 Func_Call: Func_Call_or_Mtd

   14 Func_Call_or_Mtd: Func_Call_Gen

   15 Func_Call_Gen: Func_Call_Head_Prm ')'
   16              | Func_Call_Head_NoPrm ')'

   17 Func_Call_Head_NoPrm: Func_Call_header T_Void
   18                     | Func_Call_header

   19 Func_Call_Head_Prm: Func_Call_header Assign_Expr
   20                   | Func_Call_Head_Prm ',' Assign_Expr

   21 Func_Call_header: Func_Ident '('

   22 Func_Ident: Type_Spec
   23           | Pst_Expr

   24 Unary_Expr: Pst_Expr
   25           | T_Inc Unary_Expr
   26           | T_Dec Unary_Expr
   27           | Unary_Op Unary_Expr

   28 Unary_Op: '+'
   29         | '-'

   30 Mult_Expr: Unary_Expr
   31          | Mult_Expr '*' Unary_Expr
   32          | Mult_Expr '/' Unary_Expr

   33 Add_Expr: Mult_Expr
   34         | Add_Expr '+' Mult_Expr
   35         | Add_Expr '-' Mult_Expr

   36 Shift_Expr: Add_Expr

   37 Rel_Expr: Shift_Expr
   38         | Rel_Expr '<' Shift_Expr
   39         | Rel_Expr '>' Shift_Expr
   40         | Rel_Expr T_LessEqual Shift_Expr
   41         | Rel_Expr T_GreaterEqual Shift_Expr

   42 Eq_Expr: Rel_Expr
   43        | Eq_Expr T_Equal Rel_Expr
   44        | Eq_Expr T_NotEqual Rel_Expr

   45 And_Expr: Eq_Expr

   46 Xor_Expr: And_Expr

   47 Inc_Or_Expr: Xor_Expr

   48 Log_And_Expr: Inc_Or_Expr
   49             | Log_And_Expr T_And Inc_Or_Expr

   50 Log_Xor_Expr: Log_And_Expr

   51 Log_Or_Expr: Log_Xor_Expr
   52            | Log_Or_Expr T_Or Log_Xor_Expr

   53 Cond_Expr: Log_Or_Expr

   54 Assign_Expr: Cond_Expr
   55            | Unary_Expr Assign_Op Assign_Expr

   56 Assign_Op: '='
   57          | T_Mul_Assign
   58          | T_Div_Assign
   59          | T_Add_Assign
   60          | T_Sub_Assign

   61 Expr: Assign_Expr

   62 Decl: Func_Proto ';'
   63     | Init_Decl_List ';'
   64     | Type_Qual T_Identifier ';'

   65 Func_Proto: Func_Declr ')'

   66 Func_Declr: Func_Hdr
   67           | Func_Hdr_With_Param

   68 Func_Hdr_With_Param: Func_Hdr Param_Decl
   69                    | Func_Hdr_With_Param ',' Param_Decl

   70 Func_Hdr: Fully_Spec_Type T_Identifier '('

   71 Param_Declr: Type_Spec T_Identifier

   72 Param_Decl: Param_Declr
   73           | Param_Type_Spec

   74 Param_Type_Spec: Type_Spec

   75 Init_Decl_List: Single_Decl

   76 Single_Decl: Fully_Spec_Type T_Identifier

   77 Fully_Spec_Type: Type_Spec
   78                | Type_Qual Type_Spec

   79 Layout_Qual: T_Layout '(' Layout_ID_List ')'

   80 Layout_ID_List: Layout_ID

   81 Layout_ID: T_Identifier '=' T_IntConstant

   82 Type_Qual: Single_Type_Qual
   83          | Type_Qual Single_Type_Qual

   84 Single_Type_Qual: Storage_Qual
   85                 | Layout_Qual

   86 Storage_Qual: T_Const
   87             | T_In
   88             | T_Out
   89             | T_InOut
   90             | T_Uniform

   91 Type_Spec: Type_Spec_Nonarr

   92 Type_Spec_Nonarr: T_Void
   93                 | T_Float
   94                 | T_Int
   95                 | T_Bool
   96                 | T_Vec2
   97                 | T_Vec3
   98                 | T_Vec4
   99                 | T_Mat2
  100                 | T_Mat3
  101                 | T_Mat4

  102 Init: Assign_Expr

  103 Decl_Stmt: Decl

  104 Stmt: Compd_Stmt_With_Scope
  105     | Simple_Stmt

  106 Stmt_No_New_Scope: Compd_Stmt_No_New_Scope
  107                  | Simple_Stmt

  108 Stmt_With_Scope: Compd_Stmt_No_New_Scope
  109                | Simple_Stmt

  110 Simple_Stmt: Decl_Stmt
  111            | Expr_Stmt
  112            | Select_Stmt
  113            | Switch_Stmt
  114            | Case_Label
  115            | Iter_Stmt

  116 Compd_Stmt_With_Scope: '{' '}'
  117                      | '{' Stmt_List '}'

  118 Compd_Stmt_No_New_Scope: '{' '}'
  119                        | '{' Stmt_List '}'

  120 Stmt_List: Stmt
  121          | Stmt_List Stmt

  122 Expr_Stmt: ';'
  123          | Expr ';'

  124 Select_Stmt: T_If '(' Expr ')' Select_Rest_Stmt

  125 Select_Rest_Stmt: Stmt_With_Scope T_Else Stmt_With_Scope
  126                 | Stmt_With_Scope

  127 Cond: Expr
  128     | Fully_Spec_Type T_Identifier T_Equal Init

  129 Switch_Stmt: T_Switch '(' Expr ')' '{' Switch_Stmt_List '}'

  130 Switch_Stmt_List: Stmt_List

  131 Case_Label: T_Case Expr ':'
  132           | T_Default ':'

  133 Iter_Stmt: T_While '(' Cond ')' Stmt_No_New_Scope
  134          | T_For '(' For_Init_Stmt For_Rest_Stmt ')' Stmt_No_New_Scope

  135 For_Init_Stmt: Expr_Stmt
  136              | Decl_Stmt

  137 Cond_Opt: Cond

  138 For_Rest_Stmt: Cond_Opt ';'
  139              | Cond_Opt ';' Expr

  140 Trans_Unit: Trans_Unit Ext_Decl
  141           | Ext_Decl

  142 Ext_Decl: Func_Def
  143         | Decl

  144 Func_Def: Func_Proto Compd_Stmt_No_New_Scope


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 21 70 79 124 129 133 134
')' (41) 7 15 16 65 79 124 129 133 134
'*' (42) 31
'+' (43) 28 34
',' (44) 20 69
'-' (45) 29 35
'.' (46) 10
'/' (47) 32
':' (58) 131 132
';' (59) 62 63 64 122 123 138 139
'<' (60) 38
'=' (61) 56 81
'>' (62) 39
'{' (123) 116 117 118 119 129
'}' (125) 116 117 118 119 129
error (256)
T_Void (258) 17 92
T_Bool (259) 95
T_Float (260) 93
T_Int (261) 94
T_UInt (262)
T_BVec2 (263)
T_BVec3 (264)
T_BVec4 (265)
T_IVec2 (266)
T_IVec3 (267)
T_IVec4 (268)
T_UVec2 (269)
T_UVec3 (270)
T_UVec4 (271)
T_Vec2 (272) 96
T_Vec3 (273) 97
T_Vec4 (274) 98
T_Dims (275)
T_Mat2 (276) 99
T_Mat3 (277) 100
T_Mat4 (278) 101
T_Struct (279)
T_FieldSelection (280) 10
T_In (281) 87
T_Out (282) 88
T_InOut (283) 89
T_Const (284) 86
T_Uniform (285) 90
T_Layout (286) 79
T_And (287) 49
T_Or (288) 52
T_While (289) 133
T_Break (290)
T_Continue (291)
T_Do (292)
T_Else (293) 125
T_For (294) 134
T_If (295) 124
T_Return (296)
T_Switch (297) 129
T_Case (298) 131
T_Default (299) 132
T_Identifier (300) 2 64 70 71 76 81 128
T_IntConstant (301) 4 81
T_FloatConstant (302) 5
T_BoolConstant (303) 6
T_Inc (304) 11 25
T_Dec (305) 12 26
T_LessEqual (306) 40
T_GreaterEqual (307) 41
T_Equal (308) 43 128
T_NotEqual (309) 44
T_Mul_Assign (310) 57
T_Div_Assign (311) 58
T_Add_Assign (312) 59
T_Sub_Assign (313) 60


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
Program (75)
    on left: 1, on right: 0
Var_Ident (76)
    on left: 2, on right: 3
Pri_Expr (77)
    on left: 3 4 5 6 7, on right: 8
Pst_Expr (78)
    on left: 8 9 10 11 12, on right: 10 11 12 23 24
Func_Call (79)
    on left: 13, on right: 9
Func_Call_or_Mtd (80)
    on left: 14, on right: 13
Func_Call_Gen (81)
    on left: 15 16, on right: 14
Func_Call_Head_NoPrm (82)
    on left: 17 18, on right: 16
Func_Call_Head_Prm (83)
    on left: 19 20, on right: 15 20
Func_Call_header (84)
    on left: 21, on right: 17 18 19
Func_Ident (85)
    on left: 22 23, on right: 21
Unary_Expr (86)
    on left: 24 25 26 27, on right: 25 26 27 30 31 32 55
Unary_Op (87)
    on left: 28 29, on right: 27
Mult_Expr (88)
    on left: 30 31 32, on right: 31 32 33 34 35
Add_Expr (89)
    on left: 33 34 35, on right: 34 35 36
Shift_Expr (90)
    on left: 36, on right: 37 38 39 40 41
Rel_Expr (91)
    on left: 37 38 39 40 41, on right: 38 39 40 41 42 43 44
Eq_Expr (92)
    on left: 42 43 44, on right: 43 44 45
And_Expr (93)
    on left: 45, on right: 46
Xor_Expr (94)
    on left: 46, on right: 47
Inc_Or_Expr (95)
    on left: 47, on right: 48 49
Log_And_Expr (96)
    on left: 48 49, on right: 49 50
Log_Xor_Expr (97)
    on left: 50, on right: 51 52
Log_Or_Expr (98)
    on left: 51 52, on right: 52 53
Cond_Expr (99)
    on left: 53, on right: 54
Assign_Expr (100)
    on left: 54 55, on right: 19 20 55 61 102
Assign_Op (101)
    on left: 56 57 58 59 60, on right: 55
Expr (102)
    on left: 61, on right: 7 123 124 127 129 131 139
Decl (103)
    on left: 62 63 64, on right: 103 143
Func_Proto (104)
    on left: 65, on right: 62 144
Func_Declr (105)
    on left: 66 67, on right: 65
Func_Hdr_With_Param (106)
    on left: 68 69, on right: 67 69
Func_Hdr (107)
    on left: 70, on right: 66 68
Param_Declr (108)
    on left: 71, on right: 72
Param_Decl (109)
    on left: 72 73, on right: 68 69
Param_Type_Spec (110)
    on left: 74, on right: 73
Init_Decl_List (111)
    on left: 75, on right: 63
Single_Decl (112)
    on left: 76, on right: 75
Fully_Spec_Type (113)
    on left: 77 78, on right: 70 76 128
Layout_Qual (114)
    on left: 79, on right: 85
Layout_ID_List (115)
    on left: 80, on right: 79
Layout_ID (116)
    on left: 81, on right: 80
Type_Qual (117)
    on left: 82 83, on right: 64 78 83
Single_Type_Qual (118)
    on left: 84 85, on right: 82 83
Storage_Qual (119)
    on left: 86 87 88 89 90, on right: 84
Type_Spec (120)
    on left: 91, on right: 22 71 74 77 78
Type_Spec_Nonarr (121)
    on left: 92 93 94 95 96 97 98 99 100 101, on right: 91
Init (122)
    on left: 102, on right: 128
Decl_Stmt (123)
    on left: 103, on right: 110 136
Stmt (124)
    on left: 104 105, on right: 120 121
Stmt_No_New_Scope (125)
    on left: 106 107, on right: 133 134
Stmt_With_Scope (126)
    on left: 108 109, on right: 125 126
Simple_Stmt (127)
    on left: 110 111 112 113 114 115, on right: 105 107 109
Compd_Stmt_With_Scope (128)
    on left: 116 117, on right: 104
Compd_Stmt_No_New_Scope (129)
    on left: 118 119, on right: 106 108 144
Stmt_List (130)
    on left: 120 121, on right: 117 119 121 130
Expr_Stmt (131)
    on left: 122 123, on right: 111 135
Select_Stmt (132)
    on left: 124, on right: 112
Select_Rest_Stmt (133)
    on left: 125 126, on right: 124
Cond (134)
    on left: 127 128, on right: 133 137
Switch_Stmt (135)
    on left: 129, on right: 113
Switch_Stmt_List (136)
    on left: 130, on right: 129
Case_Label (137)
    on left: 131 132, on right: 114
Iter_Stmt (138)
    on left: 133 134, on right: 115
For_Init_Stmt (139)
    on left: 135 136, on right: 134
Cond_Opt (140)
    on left: 137, on right: 138 139
For_Rest_Stmt (141)
    on left: 138 139, on right: 134
Trans_Unit (142)
    on left: 140 141, on right: 1 140
Ext_Decl (143)
    on left: 142 143, on right: 140 141
Func_Def (144)
    on left: 144, on right: 142


state 0

    0 $accept: . Program $end

    T_Void     shift, and go to state 1
    T_Bool     shift, and go to state 2
    T_Float    shift, and go to state 3
    T_Int      shift, and go to state 4
    T_Vec2     shift, and go to state 5
    T_Vec3     shift, and go to state 6
    T_Vec4     shift, and go to state 7
    T_Mat2     shift, and go to state 8
    T_Mat3     shift, and go to state 9
    T_Mat4     shift, and go to state 10
    T_In       shift, and go to state 11
    T_Out      shift, and go to state 12
    T_InOut    shift, and go to state 13
    T_Const    shift, and go to state 14
    T_Uniform  shift, and go to state 15
    T_Layout   shift, and go to state 16

    Program              go to state 17
    Decl                 go to state 18
    Func_Proto           go to state 19
    Func_Declr           go to state 20
    Func_Hdr_With_Param  go to state 21
    Func_Hdr             go to state 22
    Init_Decl_List       go to state 23
    Single_Decl          go to state 24
    Fully_Spec_Type      go to state 25
    Layout_Qual          go to state 26
    Type_Qual            go to state 27
    Single_Type_Qual     go to state 28
    Storage_Qual         go to state 29
    Type_Spec            go to state 30
    Type_Spec_Nonarr     go to state 31
    Trans_Unit           go to state 32
    Ext_Decl             go to state 33
    Func_Def             go to state 34


state 1

   92 Type_Spec_Nonarr: T_Void .

    $default  reduce using rule 92 (Type_Spec_Nonarr)


state 2

   95 Type_Spec_Nonarr: T_Bool .

    $default  reduce using rule 95 (Type_Spec_Nonarr)


state 3

   93 Type_Spec_Nonarr: T_Float .

    $default  reduce using rule 93 (Type_Spec_Nonarr)


state 4

   94 Type_Spec_Nonarr: T_Int .

    $default  reduce using rule 94 (Type_Spec_Nonarr)


state 5

   96 Type_Spec_Nonarr: T_Vec2 .

    $default  reduce using rule 96 (Type_Spec_Nonarr)


state 6

   97 Type_Spec_Nonarr: T_Vec3 .

    $default  reduce using rule 97 (Type_Spec_Nonarr)


state 7

   98 Type_Spec_Nonarr: T_Vec4 .

    $default  reduce using rule 98 (Type_Spec_Nonarr)


state 8

   99 Type_Spec_Nonarr: T_Mat2 .

    $default  reduce using rule 99 (Type_Spec_Nonarr)


state 9

  100 Type_Spec_Nonarr: T_Mat3 .

    $default  reduce using rule 100 (Type_Spec_Nonarr)


state 10

  101 Type_Spec_Nonarr: T_Mat4 .

    $default  reduce using rule 101 (Type_Spec_Nonarr)


state 11

   87 Storage_Qual: T_In .

    $default  reduce using rule 87 (Storage_Qual)


state 12

   88 Storage_Qual: T_Out .

    $default  reduce using rule 88 (Storage_Qual)


state 13

   89 Storage_Qual: T_InOut .

    $default  reduce using rule 89 (Storage_Qual)


state 14

   86 Storage_Qual: T_Const .

    $default  reduce using rule 86 (Storage_Qual)


state 15

   90 Storage_Qual: T_Uniform .

    $default  reduce using rule 90 (Storage_Qual)


state 16

   79 Layout_Qual: T_Layout . '(' Layout_ID_List ')'

    '('  shift, and go to state 35


state 17

    0 $accept: Program . $end

    $end  shift, and go to state 36


state 18

  143 Ext_Decl: Decl .

    $default  reduce using rule 143 (Ext_Decl)


state 19

   62 Decl: Func_Proto . ';'
  144 Func_Def: Func_Proto . Compd_Stmt_No_New_Scope

    ';'  shift, and go to state 37
    '{'  shift, and go to state 38

    Compd_Stmt_No_New_Scope  go to state 39


state 20

   65 Func_Proto: Func_Declr . ')'

    ')'  shift, and go to state 40


state 21

   67 Func_Declr: Func_Hdr_With_Param .
   69 Func_Hdr_With_Param: Func_Hdr_With_Param . ',' Param_Decl

    ','  shift, and go to state 41

    $default  reduce using rule 67 (Func_Declr)


state 22

   66 Func_Declr: Func_Hdr .
   68 Func_Hdr_With_Param: Func_Hdr . Param_Decl

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Float  shift, and go to state 3
    T_Int    shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    $default  reduce using rule 66 (Func_Declr)

    Param_Declr       go to state 42
    Param_Decl        go to state 43
    Param_Type_Spec   go to state 44
    Type_Spec         go to state 45
    Type_Spec_Nonarr  go to state 31


state 23

   63 Decl: Init_Decl_List . ';'

    ';'  shift, and go to state 46


state 24

   75 Init_Decl_List: Single_Decl .

    $default  reduce using rule 75 (Init_Decl_List)


state 25

   70 Func_Hdr: Fully_Spec_Type . T_Identifier '('
   76 Single_Decl: Fully_Spec_Type . T_Identifier

    T_Identifier  shift, and go to state 47


state 26

   85 Single_Type_Qual: Layout_Qual .

    $default  reduce using rule 85 (Single_Type_Qual)


state 27

   64 Decl: Type_Qual . T_Identifier ';'
   78 Fully_Spec_Type: Type_Qual . Type_Spec
   83 Type_Qual: Type_Qual . Single_Type_Qual

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Float       shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Vec2        shift, and go to state 5
    T_Vec3        shift, and go to state 6
    T_Vec4        shift, and go to state 7
    T_Mat2        shift, and go to state 8
    T_Mat3        shift, and go to state 9
    T_Mat4        shift, and go to state 10
    T_In          shift, and go to state 11
    T_Out         shift, and go to state 12
    T_InOut       shift, and go to state 13
    T_Const       shift, and go to state 14
    T_Uniform     shift, and go to state 15
    T_Layout      shift, and go to state 16
    T_Identifier  shift, and go to state 48

    Layout_Qual       go to state 26
    Single_Type_Qual  go to state 49
    Storage_Qual      go to state 29
    Type_Spec         go to state 50
    Type_Spec_Nonarr  go to state 31


state 28

   82 Type_Qual: Single_Type_Qual .

    $default  reduce using rule 82 (Type_Qual)


state 29

   84 Single_Type_Qual: Storage_Qual .

    $default  reduce using rule 84 (Single_Type_Qual)


state 30

   77 Fully_Spec_Type: Type_Spec .

    $default  reduce using rule 77 (Fully_Spec_Type)


state 31

   91 Type_Spec: Type_Spec_Nonarr .

    $default  reduce using rule 91 (Type_Spec)


state 32

    1 Program: Trans_Unit .
  140 Trans_Unit: Trans_Unit . Ext_Decl

    T_Void     shift, and go to state 1
    T_Bool     shift, and go to state 2
    T_Float    shift, and go to state 3
    T_Int      shift, and go to state 4
    T_Vec2     shift, and go to state 5
    T_Vec3     shift, and go to state 6
    T_Vec4     shift, and go to state 7
    T_Mat2     shift, and go to state 8
    T_Mat3     shift, and go to state 9
    T_Mat4     shift, and go to state 10
    T_In       shift, and go to state 11
    T_Out      shift, and go to state 12
    T_InOut    shift, and go to state 13
    T_Const    shift, and go to state 14
    T_Uniform  shift, and go to state 15
    T_Layout   shift, and go to state 16

    $default  reduce using rule 1 (Program)

    Decl                 go to state 18
    Func_Proto           go to state 19
    Func_Declr           go to state 20
    Func_Hdr_With_Param  go to state 21
    Func_Hdr             go to state 22
    Init_Decl_List       go to state 23
    Single_Decl          go to state 24
    Fully_Spec_Type      go to state 25
    Layout_Qual          go to state 26
    Type_Qual            go to state 27
    Single_Type_Qual     go to state 28
    Storage_Qual         go to state 29
    Type_Spec            go to state 30
    Type_Spec_Nonarr     go to state 31
    Ext_Decl             go to state 51
    Func_Def             go to state 34


state 33

  141 Trans_Unit: Ext_Decl .

    $default  reduce using rule 141 (Trans_Unit)


state 34

  142 Ext_Decl: Func_Def .

    $default  reduce using rule 142 (Ext_Decl)


state 35

   79 Layout_Qual: T_Layout '(' . Layout_ID_List ')'

    T_Identifier  shift, and go to state 52

    Layout_ID_List  go to state 53
    Layout_ID       go to state 54


state 36

    0 $accept: Program $end .

    $default  accept


state 37

   62 Decl: Func_Proto ';' .

    $default  reduce using rule 62 (Decl)


state 38

  118 Compd_Stmt_No_New_Scope: '{' . '}'
  119                        | '{' . Stmt_List '}'

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Float          shift, and go to state 3
    T_Int            shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_In             shift, and go to state 11
    T_Out            shift, and go to state 12
    T_InOut          shift, and go to state 13
    T_Const          shift, and go to state 14
    T_Uniform        shift, and go to state 15
    T_Layout         shift, and go to state 16
    T_While          shift, and go to state 55
    T_For            shift, and go to state 56
    T_If             shift, and go to state 57
    T_Switch         shift, and go to state 58
    T_Case           shift, and go to state 59
    T_Default        shift, and go to state 60
    T_Identifier     shift, and go to state 61
    T_IntConstant    shift, and go to state 62
    T_FloatConstant  shift, and go to state 63
    T_BoolConstant   shift, and go to state 64
    T_Inc            shift, and go to state 65
    T_Dec            shift, and go to state 66
    '('              shift, and go to state 67
    '+'              shift, and go to state 68
    '-'              shift, and go to state 69
    ';'              shift, and go to state 70
    '{'              shift, and go to state 71
    '}'              shift, and go to state 72

    Var_Ident              go to state 73
    Pri_Expr               go to state 74
    Pst_Expr               go to state 75
    Func_Call              go to state 76
    Func_Call_or_Mtd       go to state 77
    Func_Call_Gen          go to state 78
    Func_Call_Head_NoPrm   go to state 79
    Func_Call_Head_Prm     go to state 80
    Func_Call_header       go to state 81
    Func_Ident             go to state 82
    Unary_Expr             go to state 83
    Unary_Op               go to state 84
    Mult_Expr              go to state 85
    Add_Expr               go to state 86
    Shift_Expr             go to state 87
    Rel_Expr               go to state 88
    Eq_Expr                go to state 89
    And_Expr               go to state 90
    Xor_Expr               go to state 91
    Inc_Or_Expr            go to state 92
    Log_And_Expr           go to state 93
    Log_Xor_Expr           go to state 94
    Log_Or_Expr            go to state 95
    Cond_Expr              go to state 96
    Assign_Expr            go to state 97
    Expr                   go to state 98
    Decl                   go to state 99
    Func_Proto             go to state 100
    Func_Declr             go to state 20
    Func_Hdr_With_Param    go to state 21
    Func_Hdr               go to state 22
    Init_Decl_List         go to state 23
    Single_Decl            go to state 24
    Fully_Spec_Type        go to state 25
    Layout_Qual            go to state 26
    Type_Qual              go to state 27
    Single_Type_Qual       go to state 28
    Storage_Qual           go to state 29
    Type_Spec              go to state 101
    Type_Spec_Nonarr       go to state 31
    Decl_Stmt              go to state 102
    Stmt                   go to state 103
    Simple_Stmt            go to state 104
    Compd_Stmt_With_Scope  go to state 105
    Stmt_List              go to state 106
    Expr_Stmt              go to state 107
    Select_Stmt            go to state 108
    Switch_Stmt            go to state 109
    Case_Label             go to state 110
    Iter_Stmt              go to state 111


state 39

  144 Func_Def: Func_Proto Compd_Stmt_No_New_Scope .

    $default  reduce using rule 144 (Func_Def)


state 40

   65 Func_Proto: Func_Declr ')' .

    $default  reduce using rule 65 (Func_Proto)


state 41

   69 Func_Hdr_With_Param: Func_Hdr_With_Param ',' . Param_Decl

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Float  shift, and go to state 3
    T_Int    shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    Param_Declr       go to state 42
    Param_Decl        go to state 112
    Param_Type_Spec   go to state 44
    Type_Spec         go to state 45
    Type_Spec_Nonarr  go to state 31


state 42

   72 Param_Decl: Param_Declr .

    $default  reduce using rule 72 (Param_Decl)


state 43

   68 Func_Hdr_With_Param: Func_Hdr Param_Decl .

    $default  reduce using rule 68 (Func_Hdr_With_Param)


state 44

   73 Param_Decl: Param_Type_Spec .

    $default  reduce using rule 73 (Param_Decl)


state 45

   71 Param_Declr: Type_Spec . T_Identifier
   74 Param_Type_Spec: Type_Spec .

    T_Identifier  shift, and go to state 113

    $default  reduce using rule 74 (Param_Type_Spec)


state 46

   63 Decl: Init_Decl_List ';' .

    $default  reduce using rule 63 (Decl)


state 47

   70 Func_Hdr: Fully_Spec_Type T_Identifier . '('
   76 Single_Decl: Fully_Spec_Type T_Identifier .

    '('  shift, and go to state 114

    $default  reduce using rule 76 (Single_Decl)


state 48

   64 Decl: Type_Qual T_Identifier . ';'

    ';'  shift, and go to state 115


state 49

   83 Type_Qual: Type_Qual Single_Type_Qual .

    $default  reduce using rule 83 (Type_Qual)


state 50

   78 Fully_Spec_Type: Type_Qual Type_Spec .

    $default  reduce using rule 78 (Fully_Spec_Type)


state 51

  140 Trans_Unit: Trans_Unit Ext_Decl .

    $default  reduce using rule 140 (Trans_Unit)


state 52

   81 Layout_ID: T_Identifier . '=' T_IntConstant

    '='  shift, and go to state 116


state 53

   79 Layout_Qual: T_Layout '(' Layout_ID_List . ')'

    ')'  shift, and go to state 117


state 54

   80 Layout_ID_List: Layout_ID .

    $default  reduce using rule 80 (Layout_ID_List)


state 55

  133 Iter_Stmt: T_While . '(' Cond ')' Stmt_No_New_Scope

    '('  shift, and go to state 118


state 56

  134 Iter_Stmt: T_For . '(' For_Init_Stmt For_Rest_Stmt ')' Stmt_No_New_Scope

    '('  shift, and go to state 119


state 57

  124 Select_Stmt: T_If . '(' Expr ')' Select_Rest_Stmt

    '('  shift, and go to state 120


state 58

  129 Switch_Stmt: T_Switch . '(' Expr ')' '{' Switch_Stmt_List '}'

    '('  shift, and go to state 121


state 59

  131 Case_Label: T_Case . Expr ':'

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Float          shift, and go to state 3
    T_Int            shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_Identifier     shift, and go to state 61
    T_IntConstant    shift, and go to state 62
    T_FloatConstant  shift, and go to state 63
    T_BoolConstant   shift, and go to state 64
    T_Inc            shift, and go to state 65
    T_Dec            shift, and go to state 66
    '('              shift, and go to state 67
    '+'              shift, and go to state 68
    '-'              shift, and go to state 69

    Var_Ident             go to state 73
    Pri_Expr              go to state 74
    Pst_Expr              go to state 75
    Func_Call             go to state 76
    Func_Call_or_Mtd      go to state 77
    Func_Call_Gen         go to state 78
    Func_Call_Head_NoPrm  go to state 79
    Func_Call_Head_Prm    go to state 80
    Func_Call_header      go to state 81
    Func_Ident            go to state 82
    Unary_Expr            go to state 83
    Unary_Op              go to state 84
    Mult_Expr             go to state 85
    Add_Expr              go to state 86
    Shift_Expr            go to state 87
    Rel_Expr              go to state 88
    Eq_Expr               go to state 89
    And_Expr              go to state 90
    Xor_Expr              go to state 91
    Inc_Or_Expr           go to state 92
    Log_And_Expr          go to state 93
    Log_Xor_Expr          go to state 94
    Log_Or_Expr           go to state 95
    Cond_Expr             go to state 96
    Assign_Expr           go to state 97
    Expr                  go to state 122
    Type_Spec             go to state 123
    Type_Spec_Nonarr      go to state 31


state 60

  132 Case_Label: T_Default . ':'

    ':'  shift, and go to state 124


state 61

    2 Var_Ident: T_Identifier .

    $default  reduce using rule 2 (Var_Ident)


state 62

    4 Pri_Expr: T_IntConstant .

    $default  reduce using rule 4 (Pri_Expr)


state 63

    5 Pri_Expr: T_FloatConstant .

    $default  reduce using rule 5 (Pri_Expr)


state 64

    6 Pri_Expr: T_BoolConstant .

    $default  reduce using rule 6 (Pri_Expr)


state 65

   25 Unary_Expr: T_Inc . Unary_Expr

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Float          shift, and go to state 3
    T_Int            shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_Identifier     shift, and go to state 61
    T_IntConstant    shift, and go to state 62
    T_FloatConstant  shift, and go to state 63
    T_BoolConstant   shift, and go to state 64
    T_Inc            shift, and go to state 65
    T_Dec            shift, and go to state 66
    '('              shift, and go to state 67
    '+'              shift, and go to state 68
    '-'              shift, and go to state 69

    Var_Ident             go to state 73
    Pri_Expr              go to state 74
    Pst_Expr              go to state 75
    Func_Call             go to state 76
    Func_Call_or_Mtd      go to state 77
    Func_Call_Gen         go to state 78
    Func_Call_Head_NoPrm  go to state 79
    Func_Call_Head_Prm    go to state 80
    Func_Call_header      go to state 81
    Func_Ident            go to state 82
    Unary_Expr            go to state 125
    Unary_Op              go to state 84
    Type_Spec             go to state 123
    Type_Spec_Nonarr      go to state 31


state 66

   26 Unary_Expr: T_Dec . Unary_Expr

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Float          shift, and go to state 3
    T_Int            shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_Identifier     shift, and go to state 61
    T_IntConstant    shift, and go to state 62
    T_FloatConstant  shift, and go to state 63
    T_BoolConstant   shift, and go to state 64
    T_Inc            shift, and go to state 65
    T_Dec            shift, and go to state 66
    '('              shift, and go to state 67
    '+'              shift, and go to state 68
    '-'              shift, and go to state 69

    Var_Ident             go to state 73
    Pri_Expr              go to state 74
    Pst_Expr              go to state 75
    Func_Call             go to state 76
    Func_Call_or_Mtd      go to state 77
    Func_Call_Gen         go to state 78
    Func_Call_Head_NoPrm  go to state 79
    Func_Call_Head_Prm    go to state 80
    Func_Call_header      go to state 81
    Func_Ident            go to state 82
    Unary_Expr            go to state 126
    Unary_Op              go to state 84
    Type_Spec             go to state 123
    Type_Spec_Nonarr      go to state 31


state 67

    7 Pri_Expr: '(' . Expr ')'
